# novel-creator

./: .gitignore  CMakeLists.txt  Makefile  init.h  main.cpp
src/: ElementEditor.cpp  ElementEditor.hpp  FileUtils.hpp  JsonUtils.hpp  NodeManager.cpp  NodeManager.hpp  Render.cpp  Render.hpp  SceneEditor.cpp  SceneEditor.hpp  Types.hpp  main.cpp  mainrender.cpp
src-copy/: ElementCreator.cpp  ElementCreator.hpp  FileUtils.hpp  init.h  main.cpp
src/include/: raygui.h
tab/: BasicUI.hpp  NodeManager.cpp  NodeManager.hpp  SceneEditor.cpp  SceneEditor.hpp  Tab.hpp  TabManager.hpp  Types.hpp  build  main.cpp
tab/include/: Render.hpp  Types.hpp
tab/include/editors/: ElementEditor.hpp  NodeManager.hpp  SceneEditor.hpp
tab/include/enums/: Editors.hpp
tab/include/managers/: TabManager.hpp
tab/include/tabs/: AddTab.hpp  BasicTab.hpp  ContentTab.hpp  ContextMenu.hpp  HomeTab.hpp
tab/include/ui/: BasicUI.hpp  PositionResolver.hpp
tab/include/utils/: FileUtils.hpp  JsonUtils.hpp
tab/managers/: TabManager.cpp  TabManager.hpp
tab/src/: Render.cpp  main.cpp  mainrender.cpp
tab/src/editors/: ElementEditor.cpp  NodeManager.cpp  SceneEditor.cpp
tab/src/managers/: TabManager.cpp
tab/src/tabs/: ContextMenu.cpp
tab/src/ui/: PositionResolver.cpp
tab/tabs/: ContentTab.hpp  Tab.hpp
tab/ui/: BasicUI.hpp
testing/: element editor.cpp  main.cpp  test2.cpp  test3.cpp
